fix FKA new eelam line wrap

--- a/web/src/css/nav.css
+++ b/web/src/css/nav.css
@@ -44,7 +44,7 @@ nav .nav-box{
 }
 
 .menu-earth-button {
-  width: 200px;
+  width: 16em;
   text-align: left;
 }
 .earth-svg{
